@@ -3,8 +3,11 @@ As2ant 2.5
 ----------
 
 
+[+] org.as2lib.ant.UnitTest
+    Close the Flash Player on Mac OSX after all test data was received.
+
 [!] org.as2lib.ant.UnitTest
-    Fixed bug with Mac OSX on which Flash Player cannot be executed.
+    Fixed bug with Mac OSX on which the Flash Player cannot be executed.
 
 [!] samples/as2lib unit test
     Fixed wrong import: imported 'TestCase' class of AsUnit not As2lib.
